fix spacing

--- a/site/src/css/footer.scss
+++ b/site/src/css/footer.scss
@@ -29,7 +29,7 @@ footer {
 
             a {
                 color: #556;
-                margin-right: 5px;
+                margin-right: 10px;
                 height: 16px;
 
                 svg {
